[gd_scene load_steps=2 format=3 uid="uid://b8rymenqqh6ac"]

[ext_resource type="Script" uid="uid://bs78w2d6b5mdo" path="res://scenes/song_select/manual_track_input.gd" id="1_m7am5"]

[node name="ManualTrackInput" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1000.0
offset_top = 658.0
offset_right = 1000.0
offset_bottom = 658.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m7am5")

[node name="Background" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.7058824)

[node name="ModalPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ModalPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LabelConfirmation" type="Label" parent="ModalPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Ваш трек: <артист> - <название>?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ModalPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonYes" type="Button" parent="ModalPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Да"

[node name="ButtonNo" type="Button" parent="ModalPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Нет"

[node name="LineEditArtist" type="LineEdit" parent="ModalPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Поле ввода для \"Артиста\""
alignment = 1

[node name="LineEditTitle" type="LineEdit" parent="ModalPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Поле ввода для \"Названия\""
alignment = 1

[node name="ButtonSave" type="Button" parent="ModalPanel/VBoxContainer"]
layout_mode = 2
text = "Сохранить"
